force-app/main/default/objects/Subrecipient__c/Subrecipient__c.object-meta.xml
<CustomObject>
    <label>Subrecipient</label>
    <nameField>
        <label>Subrecipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subrecipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>