force-app/main/default/objects/Subrecipient__c/fields/Construction_Funds__c.field-meta.xml
<CustomField>
    <fullName>Construction_Funds__c</fullName>
    <label>Construction Funds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>