force-app/main/default/objects/Subrecipient__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <label>Grant</label>
    <referenceTo>Launchpad__Grant__c</referenceTo>
    <relationshipLabel>Subrecipients</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>