force-app/main/default/objects/Subrecipient__c/fields/Personnel_Funds_Used__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Funds_Used__c</fullName>
    <label>Personnel Funds Used</label>
    <summarizedField>Invoice__c.Personnel_Amount__c</summarizedField>
    <summaryForeignKey>Invoice__c.Subrecipient__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>